VSE: Grabbing and dropping strips with a crossfade on them can cause incorrect snapping #70844

Closed
opened 2019-10-15 17:06:03 +02:00 by hudson barkley · 11 comments

Blender Version
Broken: 2.80

Short description of error
In the VSE: when grabbing/dropping a strip that has a crossfade attached to its left side, on top of another strip, the crossfade can block the strip from snapping where it should, causing the dropped strip to snap backwards in front of other strips.

Difficult to describe, but easy to see in action:

vse grab bug.gif

Exact steps for others to reproduce the error

  1. Import/cut three strips into the vse with space between them.
  2. add a crossfade between the two leftmost strips
  3. grab the middle strip, and drop it over the left edge of the rightmost strip
    The dropped strip SHOULD snap to the leftmost edge of the right strip, but it will now snap back to the left of the leftmost strip

Expected behavior
The dropped strip should snap to the leftmost edge of the right strip, exactly how it would behave if the crossfade were not there.

**Blender Version** Broken: 2.80 **Short description of error** In the VSE: when grabbing/dropping a strip that has a crossfade attached to its left side, on top of another strip, the crossfade can block the strip from snapping where it should, causing the dropped strip to snap backwards in front of other strips. Difficult to describe, but easy to see in action: ![vse grab bug.gif](https://archive.blender.org/developer/F7820913/vse_grab_bug.gif) **Exact steps for others to reproduce the error** 1. Import/cut three strips into the vse with space between them. 2. add a crossfade between the two leftmost strips 3. grab the middle strip, and drop it over the left edge of the rightmost strip The dropped strip SHOULD snap to the leftmost edge of the right strip, but it will now snap back to the left of the leftmost strip **Expected behavior** The dropped strip should snap to the leftmost edge of the right strip, exactly how it would behave if the crossfade were not there.
Author

Added subscriber: @snuq

Added subscriber: @snuq
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Please prepare a simple .blend file (using simple color strips) to make reproducing the issue much easier.

Please prepare a simple .blend file (using simple color strips) to make reproducing the issue much easier.
Author

ok, here's an example file -
blender grab bug.blend

Press G to move the selected strip (titled 'Grab This'), drop it so its a little bit over the right strip (when it turns red).

Delete the transition (strip between the left strip and grab this) to see how its supposed to behave.

ok, here's an example file - [blender grab bug.blend](https://archive.blender.org/developer/F7825889/blender_grab_bug.blend) Press G to move the selected strip (titled 'Grab This'), drop it so its a little bit over the right strip (when it turns red). Delete the transition (strip between the left strip and grab this) to see how its supposed to behave.

Added subscribers: @iss, @mano-wii

Added subscribers: @iss, @mano-wii
Richard Antalik was assigned by Germano Cavalcante 2019-10-17 14:18:02 +02:00

I can confirm.
It is easy for the user to work around this problem, so I put low priority.
@iss, is this your area?

I can confirm. It is easy for the user to work around this problem, so I put low priority. @iss, is this your area?

Will look into this, still working on high prio stuff

Will look into this, still working on high prio stuff
Richard Antalik was unassigned by Dalai Felinto 2019-12-23 13:46:54 +01:00

Added subscriber: @SHREY-AGGARWAL

Added subscriber: @SHREY-AGGARWAL

I have proposed a fix for this issue : D14578

I have proposed a fix for this issue : [D14578](https://archive.blender.org/developer/D14578)

This issue was referenced by 502f3debf9

This issue was referenced by 502f3debf9a683280d12a5fa19bf4b3a2e2731bf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-04-21 02:02:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70844
No description provided.